--- a/usher-service/usher-service-user/src/main/resources/application-cloud.yml
+++ b/usher-service/usher-service-user/src/main/resources/application-cloud.yml
@@ -2,10 +2,16 @@ server:
   port: 8002
 
 rpc:
+  metadata-report:
+    address: nacos://cloud:8848
+  registry:
+    host: cloud
+    port: 8848
   provider:
     port: 20802
   application:
     name: provider-user
+
 log-out:
   dir-name: user
 spring:
@@ -15,6 +21,24 @@ spring:
     password: 123456
     ignore:
       tables: sys_dept_menu,sys_dept_power,sys_role_dept
+
+redis:
+  normal:
+    ip: cloud
+    port: 6379
+    password: uhyils
+  hotspot:
+    hosts: prod:26380;prod:26381;prod:26382
+    password: uhyils
+    sentinels: mymaster
+
+
+rabbit:
+  host: cloud
+  port: 5672
+  username: admin
+  password: admin
+
 id:
   organization:
     # 机构代码
