--- a/usher-common/usher-common-inside-package/pom.xml
+++ b/usher-common/usher-common-inside-package/pom.xml
@@ -178,12 +178,12 @@
     <distributionManagement>
         <repository>
             <name>maven-usher-releases</name>
-            <url>http://8.131.77.8:8081/repository/maven-usher-releases/</url>
+            <url>http://cloud:8081/repository/maven-usher-releases/</url>
             <id>releases</id>
         </repository>
         <snapshotRepository>
             <name>maven-usher-snapshots</name> <!-- 选择settings文件中的快照版本的id-->
-            <url>http://8.131.77.8:8081/repository/maven-usher-snapshots/</url>
+            <url>http://cloud:8081/repository/maven-usher-snapshots/</url>
             <id>snapshots</id><!-- 私服地址-->
         </snapshotRepository>
     </distributionManagement>
@@ -191,7 +191,7 @@
     <repositories>
         <repository>
             <name>nexus-usher</name>
-            <url>http://8.131.77.8:8081/repository/nexus-my/</url>
+            <url>http://cloud:8081/repository/nexus-my/</url>
             <id>nexus</id>
             <releases>
                 <enabled>true</enabled>
