mqtt协议初始化, 完成connect

--- a/usher-common/usher-common-protocol/pom.xml
+++ b/usher-common/usher-common-protocol/pom.xml
@@ -13,6 +13,7 @@
     <packaging>pom</packaging>
     <modules>
         <module>usher-common-protocol-mysql</module>
+        <module>usher-common-protocol-mqtt</module>
     </modules>
 
     <properties>
