--- a/usher-common/usher-common-base/pom.xml
+++ b/usher-common/usher-common-base/pom.xml
@@ -94,6 +94,11 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+        </dependency>
+
     </dependencies>
 
 </project>
