--- a/usher-common/usher-common-protocol/usher-common-protocol-mqtt/pom.xml
+++ b/usher-common/usher-common-protocol/usher-common-protocol-mqtt/pom.xml
@@ -9,17 +9,20 @@
         <version>2.1.0.0.usher-SNAPSHOT</version>
     </parent>
 
-    <artifactId>usher-common-protocol-mysql</artifactId>
+    <artifactId>usher-common-protocol-mqtt</artifactId>
+
+    <properties>
+        <maven.compiler.source>8</maven.compiler.source>
+        <maven.compiler.target>8</maven.compiler.target>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
 
     <dependencies>
         <dependency>
             <groupId>io.netty</groupId>
             <artifactId>netty-all</artifactId>
         </dependency>
-        <dependency>
-            <groupId>com.alibaba</groupId>
-            <artifactId>druid</artifactId>
-        </dependency>
+
         <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-test -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -41,5 +44,7 @@
             <artifactId>junit</artifactId>
             <scope>test</scope>
         </dependency>
+
+
     </dependencies>
 </project>
