--- a/usher-service/usher-service-gateway/pom.xml
+++ b/usher-service/usher-service-gateway/pom.xml
@@ -33,6 +33,10 @@
             <groupId>team.opentech.usher</groupId>
             <artifactId>usher-common-protocol-mysql</artifactId>
         </dependency>
+        <dependency>
+            <groupId>team.opentech.usher</groupId>
+            <artifactId>usher-common-protocol-mqtt</artifactId>
+        </dependency>
 
         <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-test -->
         <dependency>
