--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,7 @@
         <jython.version>2.7.2</jython.version>
         <javassist.version>3.24.0-GA</javassist.version>
         <kotlin.version>1.6.20-RC</kotlin.version>
+        <tomcat.version>9.0.74</tomcat.version>
         <commons-io.version>2.11.0</commons-io.version>
     </properties>
 
@@ -401,6 +402,12 @@
                 <artifactId>kotlin-test</artifactId>
                 <version>${kotlin.version}</version>
                 <scope>test</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>org.apache.tomcat.embed</groupId>
+                <artifactId>tomcat-embed-core</artifactId>
+                <version>${tomcat.version}</version>
             </dependency>
 
         </dependencies>
