去中心化集群工具     1.接入优雅上下线     2.初始上线广播以及udp服务端接收功能

--- a/usher-common/usher-common-decentralized/usher-common-decentralized-spring-start/pom.xml
+++ b/usher-common/usher-common-decentralized/usher-common-decentralized-spring-start/pom.xml
@@ -23,5 +23,9 @@
             <artifactId>usher-common-decentralized-server</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>team.opentech.usher</groupId>
+            <artifactId>usher-common-elegant</artifactId>
+        </dependency>
     </dependencies>
 </project>
