遗传算法一期(测试成功) https://www.yuque.com/shangyilong/ba3bkl/fa0xkwff2uqgsmls

--- a/pom.xml
+++ b/pom.xml
@@ -459,6 +459,7 @@
         <module>usher-service</module>
         <module>usher-common</module>
         <module>usher-out</module>
+        <module>usher-common/usher-common-util/usher-common-util-scenario</module>
     </modules>
 
     <profiles>
