--- a/usher-common/usher-common-util/pom.xml
+++ b/usher-common/usher-common-util/pom.xml
@@ -8,6 +8,7 @@
         <module>usher-common-util-obj-pool</module>
         <module>usher-common-util-ast</module>
         <module>usher-common-util-trace-executor</module>
+        <module>usher-common-util-scenario</module>
     </modules>
     <parent>
         <groupId>team.opentech.usher</groupId>
