--- a/usher-common/usher-common-util/usher-common-util-scenario/pom.xml
+++ b/usher-common/usher-common-util/usher-common-util-scenario/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>team.opentech.usher</groupId>
-        <artifactId>usher</artifactId>
+        <artifactId>usher-common-util</artifactId>
         <version>2.1.0.0.usher-SNAPSHOT</version>
     </parent>
 
@@ -22,7 +22,10 @@
             <groupId>team.opentech.usher</groupId>
             <artifactId>usher-common-base</artifactId>
         </dependency>
-
+        <dependency>
+            <groupId>org.ejml</groupId>
+            <artifactId>ejml-simple</artifactId>
+        </dependency>
 
         <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-test -->
         <dependency>
