--- a/usher-common/usher-common-util/usher-common-util-scenario/pom.xml
+++ b/usher-common/usher-common-util/usher-common-util-scenario/pom.xml
@@ -22,11 +22,11 @@
             <groupId>team.opentech.usher</groupId>
             <artifactId>usher-common-base</artifactId>
         </dependency>
-        <dependency>
-            <groupId>org.ejml</groupId>
-            <artifactId>ejml-simple</artifactId>
-        </dependency>
 
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-math3</artifactId>
+        </dependency>
         <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-test -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
