--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,7 @@
         <kotlin.version>1.6.20-RC</kotlin.version>
         <math3.version>3.6.1</math3.version>
         <commons-io.version>2.11.0</commons-io.version>
+        <manifold.version>2024.1.17</manifold.version>
     </properties>
 
     <dependencyManagement>
@@ -149,6 +150,13 @@
                 <groupId>com.alibaba.boot</groupId>
                 <artifactId>velocity-spring-boot-starter</artifactId>
                 <version>0.1.0</version>
+            </dependency>
+
+            <!--编译期重载运算符 manifold-->
+            <dependency>
+                <groupId>systems.manifold</groupId>
+                <artifactId>manifold-ext</artifactId>
+                <version>${manifold.version}</version>
             </dependency>
 
             <!--asm-->
@@ -435,9 +443,21 @@
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>${maven.compiler.plugin.version}</version>
                     <configuration>
-                        <source>1.8</source>
-                        <target>1.8</target>
+                        <source>8</source>
+                        <target>8</target>
+                        <encoding>UTF-8</encoding>
+                        <compilerArgs>
+                            <arg>-Xplugin:Manifold no-bootstrap</arg>
+                        </compilerArgs>
+                        <annotationProcessorPaths>
+                            <path>
+                                <groupId>systems.manifold</groupId>
+                                <artifactId>manifold-ext</artifactId>
+                                <version>${manifold.version}</version>
+                            </path>
+                        </annotationProcessorPaths>
                     </configuration>
+
                 </plugin>
             </plugins>
         </pluginManagement>
