--- a/usher-common/usher-common-protocol/usher-common-protocol-mysql/src/test/resources/application.yml
+++ b/usher-common/usher-common-protocol/usher-common-protocol-mysql/src/test/resources/application.yml
@@ -12,7 +12,7 @@ spring:
       freemarker:
         cache: false    #页面不加载缓存，修改即时生效
   datasource:
-    url: jdbc:mysql://prod:3306/usher_user
+    url: jdbc:mysql://${hosts}:3306/usher_user
     driver-class-name: com.mysql.cj.jdbc.Driver
     type: com.alibaba.druid.pool.DruidDataSource
     # 初始化物理连接个数
@@ -46,14 +46,14 @@ spring:
     # 通过connectProperties属性来打开mergeSql(Sql合并)功能；慢SQL记录(配置超过5秒就是慢，默认是3秒)
     connection-properties: druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
     username: root
-    password: 123456
+    password: Shang1996.
     ignore:
       tables: sys_dept_menu,sys_dept_power,sys_role_dept
 rpc:
   application:
     name: provider-test
   metadata-report:
-    address: nacos://prod:8848
+    address: nacos://${hosts}:8848
   registry:
     host: prod
     port: 8848
@@ -78,20 +78,18 @@ log-out:
   path: D:/usher/logs
 redis:
   normal:
-    ip: prod
+    ip: ${hosts}
     port: 6379
     password: uhyils-single
   hotspot:
-    hosts: prod:26380;prod:26381;prod:26382
+    hosts: ${hosts}:26380;${hosts}:26381;${hosts}:26382
     password: uhyils
     sentinels: mymaster
 
 
-rabbit:
-  host: prod
-  port: 5672
-  username: uhyils
-  password: 123456
+rocketmq:
+  config:
+    producerName: test_mysql_group
 
 id:
   organization:
