--- a/usher-service/usher-service-algorithm/src/main/resources/application-dev.yml
+++ b/usher-service/usher-service-algorithm/src/main/resources/application-dev.yml
@@ -14,9 +14,9 @@ log-out:
 
 spring:
   datasource:
-    url: jdbc:mysql://prod:3306/usher_algorithm
+    url: jdbc:mysql://${hosts}:3306/usher_algorithm
     username: root
-    password: 123456
+    password: Shang1996.
 tencent:
   voice:
     url: https://api.ai.qq.com/fcgi-bin/aai/aai_asr
