--- a/usher-service/usher-service-gateway/src/main/resources/application-dev.yml
+++ b/usher-service/usher-service-gateway/src/main/resources/application-dev.yml
@@ -19,7 +19,7 @@ spring:
   datasource:
     url: jdbc:mysql://${hosts}:3306/usher_gateway?autoReconnect=true&useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&useSSL=false
     username: root
-    password: 123456
+    password: Shang1996.
 
 token:
   enable: false
