--- a/usher-service/usher-service-gateway/src/test/resources/application-dev.yml
+++ b/usher-service/usher-service-gateway/src/test/resources/application-dev.yml
@@ -16,9 +16,9 @@ id:
 
 spring:
   datasource:
-    url: jdbc:mysql://prod:3306/usher_gateway?autoReconnect=true&useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&useSSL=false
+    url: jdbc:mysql://${hosts}:3306/usher_gateway?autoReconnect=true&useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&useSSL=false
     username: root
-    password: 123456
+    password: Shang1996.
 
 token:
   enable: false
