--- a/usher-service/usher-service-log/src/main/resources/application-dev.yml
+++ b/usher-service/usher-service-log/src/main/resources/application-dev.yml
@@ -18,9 +18,9 @@ black-list:
 
 spring:
   datasource:
-    url: jdbc:mysql://prod:3306/usher_log?autoReconnect=true&useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&useSSL=false
+    url: jdbc:mysql://${hosts}:3306/usher_log?autoReconnect=true&useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&useSSL=false
     username: root
-    password: 123456
+    password: Shang1996.
 
 id:
   organization:
@@ -30,3 +30,7 @@ id:
 #mybatis-plus:
 #  configuration:
 #    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+
+rocketmq:
+  config:
+    producerName: log_group
