--- a/usher-service/usher-service-push/src/main/resources/application-dev.yml
+++ b/usher-service/usher-service-push/src/main/resources/application-dev.yml
@@ -9,9 +9,9 @@ log-out:
   dir-name: push
 spring:
   datasource:
-    url: jdbc:mysql://prod:3306/usher_push
+    url: jdbc:mysql://${hosts}:3306/usher_push
     username: root
-    password: 123456
+    password: Shang1996.
 id:
   organization:
     # 机构代码
