--- a/usher-service/usher-service-software/src/main/resources/application-dev.yml
+++ b/usher-service/usher-service-software/src/main/resources/application-dev.yml
@@ -11,9 +11,9 @@ log-out:
 
 spring:
   datasource:
-    url: jdbc:mysql://prod:3306/usher_software
+    url: jdbc:mysql://${hosts}:3306/usher_software
     username: root
-    password: 123456
+    password: Shang1996.
 id:
   organization:
     # 机构代码
