--- a/usher-service/usher-service-user/src/main/resources/application-dev.yml
+++ b/usher-service/usher-service-user/src/main/resources/application-dev.yml
@@ -10,9 +10,9 @@ log-out:
   dir-name: user
 spring:
   datasource:
-    url: jdbc:mysql://prod:3306/usher_user?autoReconnect=true&useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&useSSL=false
+    url: jdbc:mysql://${hosts}:3306/usher_user?autoReconnect=true&useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&useSSL=false
     username: root
-    password: 123456
+    password: Shang1996.
     ignore:
       tables: sys_dept_menu,sys_dept_power,sys_role_dept
 id:
@@ -22,3 +22,7 @@ id:
 
 dynamic:
   mark: dy_user
+
+rocketmq:
+  config:
+    producerName: user_group
