--- a/pom.xml
+++ b/pom.xml
@@ -48,7 +48,7 @@
         <hutool.version>5.3.8</hutool.version>
         <mail.version>1.4.7</mail.version>
         <mongo.version>3.12.5</mongo.version>
-        <nacos.version>1.4.4</nacos.version>
+        <nacos.version>2.4.3</nacos.version>
         <velocity.version>2.3</velocity.version>
         <httpclient.version>4.5.13</httpclient.version>
         <httpcore.version>4.4.13</httpcore.version>
@@ -72,6 +72,7 @@
         <math3.version>3.6.1</math3.version>
         <commons-io.version>2.11.0</commons-io.version>
         <manifold.version>2024.1.17</manifold.version>
+        <nacos.config.spring.version>0.2.7</nacos.config.spring.version>
     </properties>
 
     <dependencyManagement>
@@ -279,6 +280,11 @@
                 <version>${nacos.version}</version>
             </dependency>
 
+            <dependency>
+                <groupId>com.alibaba.boot</groupId>
+                <artifactId>nacos-config-spring-boot-starter</artifactId>
+                <version>${nacos.config.spring.version}</version>
+            </dependency>
 
             <!-- https://mvnrepository.com/artifact/redis.clients/jedis -->
             <dependency>
