--- a/usher-common/usher-common-service/pom.xml
+++ b/usher-common/usher-common-service/pom.xml
@@ -58,6 +58,10 @@
             <groupId>org.mybatis.spring.boot</groupId>
             <artifactId>mybatis-spring-boot-starter</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba.boot</groupId>
+            <artifactId>nacos-config-spring-boot-starter</artifactId>
+        </dependency>
         <!-- druid连接池 -->
         <dependency>
             <groupId>com.alibaba</groupId>
