--- a/usher-service/usher-service-algorithm/src/main/resources/application-dev.yml
+++ b/usher-service/usher-service-algorithm/src/main/resources/application-dev.yml
@@ -14,7 +14,7 @@ log-out:
 
 spring:
   datasource:
-    url: jdbc:mysql://${hosts}:3306/usher_algorithm
+    url: jdbc:mysql://usher:3306/usher_algorithm
     username: root
     password: Shang1996.
 tencent:
