--- a/usher-service/usher-service-gateway/src/test/resources/application-dev.yml
+++ b/usher-service/usher-service-gateway/src/test/resources/application-dev.yml
@@ -16,7 +16,7 @@ id:
 
 spring:
   datasource:
-    url: jdbc:mysql://${hosts}:3306/usher_gateway?autoReconnect=true&useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&useSSL=false
+    url: jdbc:mysql://usher:3306/usher_gateway?autoReconnect=true&useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&useSSL=false
     username: root
     password: Shang1996.
 
