--- a/usher-service/usher-service-log/src/main/resources/application-dev.yml
+++ b/usher-service/usher-service-log/src/main/resources/application-dev.yml
@@ -18,7 +18,7 @@ black-list:
 
 spring:
   datasource:
-    url: jdbc:mysql://${hosts}:3306/usher_log?autoReconnect=true&useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&useSSL=false
+    url: jdbc:mysql://usher:3306/usher_log?autoReconnect=true&useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&useSSL=false
     username: root
     password: Shang1996.
 
