--- a/usher-common/usher-common-service/pom.xml
+++ b/usher-common/usher-common-service/pom.xml
@@ -62,6 +62,12 @@
             <groupId>com.alibaba.boot</groupId>
             <artifactId>nacos-config-spring-boot-starter</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>com.alibaba.boot</groupId>
+            <artifactId>nacos-config-spring-boot-actuator</artifactId>
+        </dependency>
+
         <!-- druid连接池 -->
         <dependency>
             <groupId>com.alibaba</groupId>
