--- a/usher-service/usher-service-algorithm/src/main/resources/application-dev.yml
+++ b/usher-service/usher-service-algorithm/src/main/resources/application-dev.yml
@@ -1,30 +1,8 @@
-# 端口
-server:
-  port: 8008
-
-rpc:
-  provider:
-    port: 20808
-  application:
-    name: provider-algorithm
-
-# 日志输出文件配置
-log-out:
-  dir-name: algorithm
-
+# nacos相关配置
+nacos:
+  config:
+    # 配置ID
+    data-id: usher_algorithm
 spring:
-  datasource:
-    url: jdbc:mysql://usher:3306/usher_algorithm
-    username: root
-    password: Shang1996.
-tencent:
-  voice:
-    url: https://api.ai.qq.com/fcgi-bin/aai/aai_asr
-
-id:
-  organization:
-    # 机构代码
-    code: 2
-
-python:
-  home: C:\Users\Lenovo\AppData\Local\Programs\Python\Python38
+  application:
+    name: usher_algorithm
