--- a/usher-service/usher-service-work-orders/src/main/resources/application-dev.yml
+++ b/usher-service/usher-service-work-orders/src/main/resources/application-dev.yml
@@ -1,20 +1,8 @@
-server:
-  port: 8011
-rpc:
-  provider:
-    port: 20811
-  application:
-    name: provider-order
-
-log-out:
-  dir-name: myOrder
-
+# nacos相关配置
+nacos:
+  config:
+    # 配置ID
+    data-id: usher_order
 spring:
-  datasource:
-    url: jdbc:mysql://usher:3306/usher_order
-    username: root
-    password: Shang1996.
-id:
-  organization:
-    # 机构代码
-    code: 11
+  application:
+    name: usher_order
