独立空间-子空间 初始化

--- a/usher-api/pom.xml
+++ b/usher-api/pom.xml
@@ -22,6 +22,7 @@
         <module>usher-api-provider-work-orders</module>
         <module>usher-api-provider-gateway</module>
         <module>usher-api-provider-gateway-sdk</module>
+        <module>usher-api-provider-ai-control</module>
     </modules>
 
 
