添加 查询当前账号下的所有独立空间 功能

--- a/usher-service/usher-web/pom.xml
+++ b/usher-service/usher-web/pom.xml
@@ -75,6 +75,10 @@
         </dependency>
         <dependency>
             <groupId>team.opentech.usher</groupId>
+            <artifactId>usher-api-provider-ai-control</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>team.opentech.usher</groupId>
             <artifactId>usher-common-hot-spot</artifactId>
         </dependency>
 
