子空间相关功能提交

--- a/usher-service/usher-service-ai-control/pom.xml
+++ b/usher-service/usher-service-ai-control/pom.xml
@@ -18,6 +18,10 @@
 
         <dependency>
             <groupId>team.opentech.usher</groupId>
+            <artifactId>usher-api-provider-user</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>team.opentech.usher</groupId>
             <artifactId>usher-api-provider-ai-control</artifactId>
         </dependency>
     </dependencies>
