--- a/usher-common/usher-common-mq/pom.xml
+++ b/usher-common/usher-common-mq/pom.xml
@@ -27,6 +27,11 @@
             <artifactId>usher-common-log</artifactId>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>team.opentech.usher</groupId>
+            <artifactId>usher-common-elegant</artifactId>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
 </project>
