--- a/usher-common/usher-common-event-bus/pom.xml
+++ b/usher-common/usher-common-event-bus/pom.xml
@@ -9,6 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
+    <packaging>jar</packaging>
     <artifactId>usher-common-event-bus</artifactId>
 
     <properties>
@@ -44,5 +45,4 @@
             <version>3.36.0.3</version>
         </dependency>
     </dependencies>
-
 </project>
