--- a/usher-common/pom.xml
+++ b/usher-common/pom.xml
@@ -26,6 +26,7 @@
         <module>usher-common-swagger</module>
         <module>usher-common-rpc</module>
         <module>usher-common-protocol</module>
+        <module>usher-common-util/usher-common-util-ustream</module>
     </modules>
 
 </project>
