神奇的stream流写法

--- a/usher-common/usher-common-inside-package/pom.xml
+++ b/usher-common/usher-common-inside-package/pom.xml
@@ -84,6 +84,11 @@
             </dependency>
             <dependency>
                 <groupId>team.opentech.usher</groupId>
+                <artifactId>usher-common-util-ustream</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>team.opentech.usher</groupId>
                 <artifactId>usher-common-protocol-mysql</artifactId>
                 <version>${project.version}</version>
             </dependency>
